--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,7 @@ requirements:
   host:
     - python {{ python_min }}
     - pip
+    - setuptools
     - h5py >=3.1.0  # needed for import in setup.py
   run:
     - python >={{ python_min }}
